--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,57 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  margin: 0;
+  font-family: inter;
+  background-color: #282d35;
+  color: white;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+  height: 90px;
+  background-color: #21222a;
+  padding: 30px 25px;
+}
+nav {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+nav > img {
+  width: 40px;
+  margin-right: 7px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+nav > span {
+  color: #61dafb;
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+main {
+  padding: 60px 30px;
+  background-image: url(/src/images/react-logo.png);
+  background-repeat: no-repeat;
+  background-position: right 65%;
+  background-position-y: 75%;
 }
 
-.card {
-  padding: 2em;
+main > h1 {
+  margin: 0;
+  font-size: 2.4rem;
+}
+.facts-list {
+  margin-top: 46px;
+  max-width: 400px;
 }
 
-.read-the-docs {
-  color: #888;
+.facts-list > li {
+  padding-block: 10px;
+  line-height: 19px;
+}
+
+.facts-list > li::marker{
+  color: #61dafb;
+  font-size: 1.5rem;
 }
