--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,47 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
-  font-family: inter;
-  background-color: #282d35;
-  color: white;
+  /* background-color: #282d35; */
+  /* color: white; */
 }
 
 header {
-  height: 90px;
-  background-color: #21222a;
-  padding: 30px 25px;
-}
-nav {
+  background-color: #f55a5a;
   display: flex;
+  justify-content: center;
   align-items: center;
-  height: 100%;
+  color: white;
+  height: 55px;
 }
-nav > img {
+
+header > img {
   width: 40px;
   margin-right: 7px;
+
 }
 
-nav > span {
-  color: #61dafb;
-  font-size: 1.4rem;
-  font-weight: 700;
-}
-main {
-  padding: 60px 30px;
-  background-image: url(/src/images/react-logo.png);
-  background-repeat: no-repeat;
-  background-position: right 65%;
-  background-position-y: 75%;
+header > h1 {
+  font-size: 0.9rem;
+  font-weight: 500;
 }
 
-main > h1 {
-  margin: 0;
-  font-size: 2.4rem;
+article.journal-entry{
+  display: flex;
 }
-.facts-list {
-  margin-top: 46px;
-  max-width: 400px;
+.main-image-container{
+  width: 125px;
+  height: 168px;
+  overflow: hidden;
+  border-radius: 5px;
+  margin-right: 19px;
+  flex-shrink: 0;
+}
+.main-image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.marker-image{
+  width: 7px;
+  margin-right: 4px;
 }
 
-.facts-list > li {
-  padding-block: 10px;
-  line-height: 19px;
-}
-
-.facts-list > li::marker{
-  color: #61dafb;
-  font-size: 1.5rem;
-}
